--- a/src/render-opencsg.cc.org
+++ b/src/render-opencsg.cc.org
@@ -14,10 +14,10 @@ public:
 	double *m;
 	int csgmode;
 	virtual void render() {
-		glPushMatrix();
-		glMultMatrixd(m);
+		//glPushMatrix();
+		//glMultMatrixd(m);
 		p->render_surface(PolySet::COLORMODE_NONE, PolySet::csgmode_e(csgmode), m);
-		glPopMatrix();
+		//glPopMatrix();
 	}
 };
 
@@ -39,8 +39,8 @@ void renderCSGChainviaOpenCSG(CSGChain *chain, GLint *shaderinfo, bool highlight
 				glUseProgram(shaderinfo[0]);
 			for (; j < i; j++) {
 				double *m = chain->matrices[j];
-				glPushMatrix();
-				glMultMatrixd(m);
+				//glPushMatrix();
+				//glMultMatrixd(m);
 				int csgmode = chain->types[j] == CSGTerm::TYPE_DIFFERENCE ? PolySet::CSGMODE_DIFFERENCE : PolySet::CSGMODE_NORMAL;
 				if (highlight) {
 					chain->polysets[j]->render_surface(PolySet::COLORMODE_HIGHLIGHT, PolySet::csgmode_e(csgmode + 20), m, shaderinfo);
@@ -48,10 +48,10 @@ void renderCSGChainviaOpenCSG(CSGChain *chain, GLint *shaderinfo, bool highlight
 					chain->polysets[j]->render_surface(PolySet::COLORMODE_BACKGROUND, PolySet::csgmode_e(csgmode + 10), m, shaderinfo);
 				} else if (m[16] >= 0 || m[17] >= 0 || m[18] >= 0 || m[19] >= 0) {
 					// User-defined color from source
-					glColor4d(m[16], m[17], m[18], m[19]);
+					//glColor4d(m[16], m[17], m[18], m[19]);
 					if (shaderinfo) {
-						glUniform4f(shaderinfo[1], m[16], m[17], m[18], m[19]);
-						glUniform4f(shaderinfo[2], (m[16]+1)/2, (m[17]+1)/2, (m[18]+1)/2, 1.0);
+						//glUniform4f(shaderinfo[1], m[16], m[17], m[18], m[19]);
+						//glUniform4f(shaderinfo[2], (m[16]+1)/2, (m[17]+1)/2, (m[18]+1)/2, 1.0);
 					}
 					chain->polysets[j]->render_surface(PolySet::COLORMODE_NONE, PolySet::csgmode_e(csgmode), m, shaderinfo);
 				} else if (chain->types[j] == CSGTerm::TYPE_DIFFERENCE) {
@@ -59,7 +59,7 @@ void renderCSGChainviaOpenCSG(CSGChain *chain, GLint *shaderinfo, bool highlight
 				} else {
 					chain->polysets[j]->render_surface(PolySet::COLORMODE_MATERIAL, PolySet::csgmode_e(csgmode), m, shaderinfo);
 				}
-				glPopMatrix();
+				//glPopMatrix();
 			}
 			if (shaderinfo)
 				glUseProgram(0);
